<resources>
    <string name="app_name">MyLibrary</string>
    <string name="app_title">My Library</string>
    <string name="title_hint">Titre du livre</string>
    <string name="author_hint">Auteur du livre</string>
    <string name="search_btn">Rechercher</string>
    <string name="library_btn">Ma Bibliothèque</string>
    <string name="thumbnail_description">Couverture du livre</string>
    <string name="bookmark_description">Favori</string>
    <string name="search_page_title">Résultats de la recherche</string>
    <string name="library_page_title">Ma Bibliothèque</string>

    <string name="details_page_title">Détails du livre</string>
    <string name="details_authors">Auteur(s) :</string>
    <string name="details_publisher">Editeur :</string>
    <string name="details_date">Date de publication :</string>
    <string name="details_description">Résumé :</string>
    <string name="details_preview_btn">Aperçu</string>


    <string name="bookmark_added"> a été ajouté à la bibliotèque</string>

    <string name="delete_bookmark_message">Voulez-vous supprimer ce livre?</string>
    <string name="ok">Oui</string>
    <string name="cancel">Annuler</string>

    <string name="empty_library_message">Votre bibliotèque est vide</string>
    <string name="no_result_message">Aucun résultat pour votre recherche</string>


    <string name="api_key">AIzaSyBDh3BSclKzwLG_zR1swKmLxRgXNtgopo8</string>
</resources>