<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.details.DetailsActivity">

    <ImageView
        android:id="@+id/details_bookThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/thumbnail_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/details_bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_bookThumbnail" />

    <TextView
        android:id="@+id/details_authorsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_authors"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/details_bookAuthors"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/details_bookAuthors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:maxLines="2"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/details_bookTitle" />

    <TextView
        android:id="@+id/details_publisherLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_publisher"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/details_bookPublisher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_authorsLabel" />

    <TextView
        android:id="@+id/details_bookPublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/details_bookAuthors" />

    <TextView
        android:id="@+id/details_publishedDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_date"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/details_bookPublishedDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_publisherLabel" />

    <TextView
        android:id="@+id/details_bookPublishedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/barrier"
        app:layout_constraintTop_toBottomOf="@+id/details_bookPublisher" />

    <TextView
        android:id="@+id/details_descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_description"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_publishedDateLabel" />

    <TextView
        android:id="@+id/details_bookDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:maxLines="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_descriptionLabel" />

    <Button
        android:id="@+id/details_previewBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/details_preview_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_bookDescription"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="details_publishedDateLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>